# open-vaporphase

./: .gitignore  .gitmodules  .~lock.bom.ods#  README.md  bom.ods
cad/: 16mm heater block-Part01416mm block v2.step  16mm heater block-Part01416mm block v2.stl  16mm heater block-everything16mm block v2.step  16mm heater block.20260103-212744.FCBak  16mm heater block.20260103-222806.FCBak  16mm heater block.20260115-001544.FCBak  16mm heater block.20260115-151848.FCBak  16mm heater block.20260115-154348.FCBak  16mm heater block.20260115-154441.FCBak  16mm heater block.FCStd  open-vaporphase-Part014Frame_Sketch009_Edge4.gltf  open-vaporphase-back wall asmback wall plate.step  open-vaporphase-everything-asm.gltf  open-vaporphase-everything-asm.step  open-vaporphase.20251230-144143.FCBak  open-vaporphase.20260101-164938.FCBak  open-vaporphase.20260102-020136.FCBak  open-vaporphase.20260102-021619.FCBak  open-vaporphase.20260102-182305.FCBak  open-vaporphase.20260102-182806.FCBak  open-vaporphase.20260102-185727.FCBak  open-vaporphase.20260102-192221.FCBak  open-vaporphase.20260102-201536.FCBak  open-vaporphase.20260103-014258.FCBak  open-vaporphase.20260103-015538.FCBak  open-vaporphase.20260103-212916.FCBak  open-vaporphase.20260107-003937.FCBak  open-vaporphase.20260107-014020.FCBak  open-vaporphase.20260115-181553.FCBak  open-vaporphase.FCStd
cad/exports/: open-vaporphase-right-frame.gltf
cad/res/: 1-2 gastronorm.20260116-082547.FCBak  1-2 gastronorm.FCStd  236-7194 3030 90deg m6.FCStd  (+18 more)
gui/: Cargo.toml
gui-test/: Cargo.toml  build.rs
gui-test/src/: display.rs
(+7 files in other folders)
